[workspace]
members = ["bux", "bux-cli", "bux-sys"]
default-members = ["bux"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/bux"

[workspace.dependencies]
bux-sys = { version = "0.1", path = "bux-sys" }

clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
bindgen = "0.72"
flate2 = "1"
tar = "0.4"
ureq = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
# missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
