[package]
name = "bux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "CLI for the bux micro-VM sandbox"
keywords = ["ai", "sandbox", "vm", "cli"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "bux"
path = "src/main.rs"

[dependencies]
bux.workspace = true
bux-oci.workspace = true
bux-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
libc.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["io-std"] }

[build-dependencies]
ureq.workspace = true

[lints]
workspace = true
