[package]
name = "bux-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Extension traits and utilities for the bux micro-VM sandbox"
keywords = ["ai", "sandbox", "vm", "extensions"]
categories = ["virtualization"]

[dependencies]

[lints]
workspace = true
