[package]
name = "bux-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Network backend abstraction and gvproxy (gvisor-tap-vsock) integration for bux micro-VMs"
readme = "README.md"
links = "gvproxy"
categories = ["api-bindings", "network-programming"]
keywords = ["vm", "sandbox", "networking", "gvproxy", "ffi"]
rust-version = "1.85"

[build-dependencies]
# Go source compilation handled by build.rs — no Rust build deps needed

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# FFI crate: inherit workspace lints but allow unsafe code.
# Note: Cargo doesn't support overriding individual lints when using
# workspace = true, so we duplicate the workspace config and relax unsafe_code.
[lints.rust]
unsafe_code = "allow"
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = "allow"
