[package]
name = "bux-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Network backend abstraction for bux micro-VMs (NetworkBackend trait + GvproxyBackend)"
readme = "README.md"
categories = ["network-programming", "virtualization"]
keywords = ["vm", "sandbox", "networking", "gvproxy"]
rust-version = "1.85"

[dependencies]
bux-gvproxy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
