[package]
name = "bux-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "OCI image management for bux micro-VM sandbox"
keywords = ["oci", "container", "image", "registry"]
categories = ["virtualization"]

[dependencies]
dirs.workspace = true
flate2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
ureq.workspace = true

[lints]
workspace = true
