[package]
name = "bux-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "OCI image management for bux micro-VM sandbox"
keywords = ["oci", "container", "image", "registry"]
categories = ["virtualization"]

[dependencies]
flate2.workspace = true
oci-client.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
