[package]
name = "bux-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Wire protocol for bux host-guest communication"
keywords = ["vm", "protocol", "sandbox"]
categories = ["encoding"]

[dependencies]
postcard = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
