[package]
name = "bux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Embedded micro-VM sandbox for running AI agents"
keywords = ["ai", "sandbox", "vm", "kvm"]
categories = ["virtualization", "api-bindings"]

[dependencies]
bux-proto.workspace = true
bux-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time", "sync"] }

[lints]
workspace = true
