[package]
name = "bux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Embedded micro-VM sandbox for running AI agents"
keywords = ["ai", "sandbox", "vm", "kvm"]
categories = ["virtualization", "api-bindings"]

[[bin]]
name = "bux-shim"
path = "src/bin/shim.rs"

[dependencies]
bux-proto.workspace = true
bux-krun.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
bux-bwrap.workspace = true

[target.'cfg(unix)'.dependencies]
bux-e2fs.workspace = true
bux-oci.workspace = true
dirs.workspace = true
libc.workspace = true
nix.workspace = true
rusqlite.workspace = true
signal-hook.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time", "sync"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
