[package]
name = "bux-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest agent that runs inside a bux micro-VM"
publish = false

[dependencies]
bux-proto = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
nix = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "io-util", "process", "fs", "time", "sync", "signal"] }
tokio-vsock = { workspace = true }

[lints]
workspace = true
