[package]
name = "bux-landlock"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Landlock LSM filesystem restrictions for bux — Linux-only L1 platform primitive"
keywords = ["landlock", "lsm", "linux", "sandbox", "filesystem"]
categories = ["os::linux-apis", "virtualization"]

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc.workspace = true

[lints]
workspace = true
