[package]
name = "bux-qcow2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust QCOW2 v3 image operations — create overlays, read headers, flatten backing chains, resize"
readme = "README.md"
categories = ["filesystem", "virtualization"]
keywords = ["qcow2", "qemu", "disk", "cow", "virtualization"]
rust-version = "1.85"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
